[package]
name = "rust-workshop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
log = "0.4.7"
pretty_env_logger = "0.4.0"
byteorder = "1.4.3"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
postcard = { version = "1.0.2", features = ["alloc"] }
