[package]
name = "rust-workshop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
anyhow = "1.0.64"
log = "0.4.7"
pretty_env_logger = "0.4.0"
byteorder = "1.4.3"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
postcard = { version = "1.0.2", features = ["alloc"] }
dotenvy = "0.15.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.11", features = ["make"] }
tower-http = { version = "0.3.4", features = ["fs", "set-header"] }
glib = "0.15"
gst = { package = "gstreamer", verson = "0.18.8" }
gst-app = { package = "gstreamer-app", verson = "0.18.7" }
gst-base = { package = "gstreamer-base", verson = "0.18.0" }
gst-video = { package = "gstreamer-video", verson = "0.18.7" }
ges = { package = "gstreamer-editing-services", verson = "0.18.3" }
gst-pbutils = { package = "gstreamer-pbutils", verson = "0.18.7" }
gio = "0.15"
